Fix lint and self-check

--- a/mypy_self_check.ini
+++ b/mypy_self_check.ini
@@ -18,3 +18,7 @@ show_error_codes = True
 pretty = True
 always_false = MYPYC
 plugins = misc/proper_plugin.py
+
+[mypy-mypy.visitor]
+# See docstring for NodeVisitor for motivation.
+warn_no_return = False
