--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
 jobs:
   include:
   # Specifically request 3.5.1 because we need to be compatible with that.
-  - name: "run test suite with python 3.5.1 (compiled)"
+  - name: "run test suite with python 3.5.1 (compiled with mypyc)"
     python: 3.5.1
     dist: trusty
     env:
