--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 minversion = 6.0.0
 
+# Are you updating anything in this file? Then update misc/release-test.sh as well
+# Thanks!
+
 testpaths = mypy/test mypyc/test
 
 python_files = test*.py
