CI: upgrade some dependencies
I think this might help resolve a weird typeshed CI issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,8 +86,7 @@ jobs:
 
 install:
 - pip install -U pip setuptools
-- pip install -U 'virtualenv<20'
-- pip install -U tox==3.9.0
+- pip install -U tox>=3.15
 - tox --notest
 
 # This is a big hack and only works because the layout of our directories
