--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
     dist: trusty
     env:
     - TOXENV=py
-    - EXTRA_ARGS="-n 2"
+    # - EXTRA_ARGS="-n 2"
     - TEST_MYPYC=1
   - name: "run test suite with python 3.6"
     python: 3.6    # 3.6.3  pip  9.0.1
@@ -37,7 +37,7 @@ jobs:
     python: 3.7
     env:
     - TOXENV=py
-    - EXTRA_ARGS="-n 2"
+    # - EXTRA_ARGS="-n 2"
     - TEST_MYPYC=1
   - name: "run test suite with python 3.8"
     python: 3.8
