--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ jobs:
   #   - EXTRA_ARGS=
 
 install:
-- pip install -U pip setuptools
+- pip install -U pip==20.3.4 setuptools
 - pip install -U 'virtualenv<20'
 - pip install -U tox==3.20.1
 - python2 -m pip install --user -U typing
