--- a/mypy_self_check.ini
+++ b/mypy_self_check.ini
@@ -19,4 +19,4 @@ pretty = True
 always_false = MYPYC
 plugins = misc/proper_plugin.py
 python_version = 3.5
-exclude = /(mypy/typeshed|__pycache__|site-packages|node_modules)/|/(\.[^/]+|[^/]+~)/?$
+exclude = /(mypy/typeshed|__pycache__|site-packages)/|/(\.[^/]+)/?$
