Expose proper plugin plugin from within mypy for external usage

--- a/mypy_self_check.ini
+++ b/mypy_self_check.ini
@@ -17,6 +17,6 @@ show_traceback = True
 show_error_codes = True
 pretty = True
 always_false = MYPYC
-plugins = misc/proper_plugin.py
+plugins = mypy.plugins.proper_plugin
 python_version = 3.6
 exclude = /mypy/typeshed/
