--- a/.github/workflows/mypy_primer_comment.yml
+++ b/.github/workflows/mypy_primer_comment.yml
@@ -88,9 +88,8 @@ jobs:
             console.log("Diff from mypy_primer:")
             console.log(data)
 
-            let body
             if (data.trim()) {
-              body = 'Diff from [mypy_primer](https://github.com/hauntsaninja/mypy_primer), showing the effect of this PR on open source code:\n```diff\n' + data + '```'
+              const body = 'Diff from [mypy_primer](https://github.com/hauntsaninja/mypy_primer), showing the effect of this PR on open source code:\n```diff\n' + data + '```'
               await github.issues.createComment({
                 issue_number: fs.readFileSync("pr_number.txt", { encoding: "utf8" }),
                 owner: context.repo.owner,
